# E-Commerce-template

./: .gitpod.yml  README.md  pyproject.toml  replit.nix  requirements.txt  wsgi.py
App/: __init__.py  app.py  data.db  models.py
App/assets/css/: style.css
App/controllers/: __init__.py  karmacontroller.py  reviewcontroller.py  studentcontroller.py  user.py
App/models/: karmaranking.py  review.py  user.py  user.py.old
App/static/: home.css  styles.css
App/static/css/: styles.css
App/templates/: dashboard.html  home.html  index.html  layout.html  login.html  signup.html
App/templates/dashboard/: add_product.html  dashboard.html  products.html
App/templates/product-admin/: accounts.html  add-product.html  index.html  products.html
App/tests/: test_app.py
App/views/: __init__.py  auth.py  karma.py  review.py  student.py  user.py
Flask-Saas-System/: wsgi.py
instance/: temp-database.db
