[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask-login = "^0.6.2"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.0.0"
flask-uploads = "^0.2.1"
sqlalchemy = "^2.0.21"
flask = "^3.0.0"
zope = "^5.8.6"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.5.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"